samples/_failures_safe/1761271491_2ee397_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1191a4d9.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_1191a4d9.c:167:5: error: expected declaration or statement at end of input
  167 |     Parser parser;
      |     ^~~~~~
